# arkham-mcp

./: .env.example  .mcp.http.json  .mcp.json  BULLA_Investigation_Report.md  pyproject.toml
.claude/: settings.local.json
src/arkham_mcp/: cache.py  client.py  config.py  server.py
src/arkham_mcp/http/: playwright_client.py  playwright_driver.py
src/arkham_mcp/prompts/: investigation.py
src/arkham_mcp/providers/: __init__.py  arkham.py  base.py  playwright.py
src/arkham_mcp/resources/: address.py  entity.py  network.py
src/arkham_mcp/tools/: _transfer_utils.py  activity.py  atomic.py  forensics.py  investigation.py  profiles.py
tests/: conftest.py  test_auth.py  test_cache.py  test_providers.py  test_resources.py
tests/integrations/: test_arkham_client.py
tests/tools/: test_activity.py  test_atomic.py  test_investigation.py  test_profiles.py
