[project]
name = "arkham-mcp"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastmcp>=2.0",
    "aiohttp>=3.9",
    "pydantic-settings>=2.0",
    "patchright (>=1.58.2,<2.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
]

[project.optional-dependencies]
playwright = ["patchright>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
arkham-mcp = "arkham_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arkham_mcp"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# addopts = ["--ignore=tests/integrations"]

[tool.coverage.run]
source = ["src/arkham_mcp"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
